Fixed mobile exit button height issue. Made Nav bar larger on mobile and sticky.

--- a/views/assets/global.css
+++ b/views/assets/global.css
@@ -60,7 +60,16 @@ footer {
     position: sticky;
     top: 0;
     right: 0;
-    padding: 2.5px 5px;
+    background: rgba(255,255,255,.75);
+}
+
+@media only screen and (max-width: 768px) {
+    .exit {
+        height: 25px;
+        position: fixed;
+        top: 5.1vh;
+        right: 5vw;
+    }
 }
 
 .svg-img-button {
@@ -219,6 +228,9 @@ footer {
     nav {
         width: 100%;
         height: auto;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
         background: #ECD185;
         border-bottom: 1px solid #707070;
     }
@@ -229,24 +241,31 @@ footer {
         cursor: pointer;
     }
     
+    #hamburger img {
+        width: 150%;
+        height: auto;
+    }
+    
     /* ***** Navbar Title ***** */
     #title {
         flex-direction: column;
         width: 100%;
-        font: 1.5rem Segoe UI;
-        font-weight: bold;
         letter-spacing: 0px;
         color: #707070;
     }
     
     #mob-head {
         width: 100%;
+        height: 50px;
         padding: 2.5px 10px;
     }
 
     #mob-title {
         flex-grow: 1;
+        font: 2rem Segoe UI;
+        font-weight: bold;
         justify-content: start;
+        align-items: center;
     }
 
     /* ***** Navbar Buttons ***** */
@@ -257,12 +276,12 @@ footer {
     .navlink {
         width: 100%;
         align-items: center;
-        font: 1rem Segoe UI;
+        font: 1.25rem Segoe UI;
         font-weight: bold;
         color: #707070;
         letter-spacing: 0px;
         border-bottom: 1px solid black;
-        padding: 2.5px 10px;
+        padding: 5px 10px;
     }
     
     .nav-hm {
@@ -332,6 +351,9 @@ footer {
     background: #ECD185;
     border-bottom: 1px solid #707070;
     font: 1rem Segoe UI;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
 }
 
 #filter-sel-div {
