--- a/views/pages/list/list_mobile.css
+++ b/views/pages/list/list_mobile.css
@@ -195,7 +195,7 @@
         height: 300px;
         border: 1px solid black;
         box-shadow: 2px 5px 3px #00000040;
-        margin-top: 10vh;
+        margin-top: 5vh;
     }
 
     #nr-select form {
